--- a/app/assets/templates/events/new.html
+++ b/app/assets/templates/events/new.html
@@ -1,1 +1,30 @@
-h2dhsksefhsdk
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="newEvent">
+                <form role="form">
+                    <div class="form-group">
+                        <label for="eventName">Experience name</label>
+                        <input type="text" class="form-control" id="eventName" placeholder="Enter the name of the experience">
+                    </div>
+                    <div class="form-group">
+                        <label for="eventdescription">Experience description</label>
+                        <textarea class="form-control" rows="3", placeholder="Enter the descrption for this experience" id="eventdescription" auto-grow></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputFile">File input</label>
+                        <input type="file" id="exampleInputFile">
+                        <p class="help-block">Example block-level help text here.</p>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
