--- a/app/assets/templates/events/show.html
+++ b/app/assets/templates/events/show.html
@@ -20,13 +20,10 @@
                     <div class="eventSubDetailsContainer">
                         <div class="eventSubDetails">
                             <h4>{{event.event_name}}</h4>
-                            <strong>Rs {{event.price}}</strong>
-                            <br/>
+                            <p class="eventPrice">Rs {{event.price}}</p>
                             Event Date: 22 January 2013
-                            <br>
                             Seats
-                            <br>
-                            <select name="" id="">
+                            <select name="" id="" class="form-control">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
