Added social sharing buttons

--- a/app/assets/templates/events/show.html
+++ b/app/assets/templates/events/show.html
@@ -38,6 +38,24 @@
 
                     </div>
 
+                    <div class="eventGeneralDetailsContainer">
+                        <div class="social">
+                            <h4>Share this experience with your friends</h4>
+                            <!-- Social plugin -->
+                            <!-- AddThis Button BEGIN -->
+                            <div addthis-toolbox class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                                <a class="addthis_button_preferred_1"></a>
+                                <a class="addthis_button_preferred_2"></a>
+                                <a class="addthis_button_preferred_3"></a>
+                                <a class="addthis_button_preferred_4"></a>
+                                <a class="addthis_button_compact"></a>
+                                <a class="addthis_counter addthis_bubble_style"></a>
+                            </div>
+
+                            <!-- AddThis Button END -->
+                        </div>
+                    </div>
+
 
                     <div class="eventGeneralDetailsContainer">
                         <div class="eventSubDetails">
