Pushing to github

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -322,6 +322,9 @@ NAV
   padding: 20px;
   margin: 20px 0; }
 
+#tinymce {
+  font-size: 1.4em; }
+
 /************************************************************************/
 /* Brand colors and styles */
 /************************************************************************/
