--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -393,6 +393,11 @@ NAV
   @include box-shadow;
   padding: 20px;
   margin: 20px 0;
+
+}
+#tinymce
+{
+  font-size: 1.4em;
 }
 /************************************************************************/
 /* Brand colors and styles */
