--- a/app/assets/templates/events/show.html
+++ b/app/assets/templates/events/show.html
@@ -14,6 +14,9 @@
                         -->
                         <!--<h1>{{event.event_image.event_image.url}}</h1>-->
                         <h4>{{ event.event_name }}</h4>
+                        <p>
+                            {{ event.description }}
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -81,3 +84,4 @@
         </div>
     </div>
 </div>
+
