--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -378,6 +378,17 @@ NAV
       .subDetails
       {
         margin-top: 5px;
+        ul
+        {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          li
+          {
+            display: inline;
+            margin-right: 10px;
+          }
+        }
 
       }
     }
