--- a/app/assets/templates/events/new.html
+++ b/app/assets/templates/events/new.html
@@ -2,27 +2,27 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="newEvent">
-                <form role="form">
+                <form role="form" ng-submit="newEvent()">
                     <div class="form-group">
                         <label for="eventName">Experience name</label>
-                        <input type="text" class="form-control" id="eventName" placeholder="Enter the name of the experience">
+                        <input type="text" class="form-control" id="eventName" ng-model="eventName" placeholder="Enter the name of the experience">
                     </div>
                     <div class="form-group">
                         <label for="tinymce">Experience description</label>
-                        <textarea id="tinymce" ui-tinymce class="form-control" rows="3" placeholder="Enter the descrption for this experience" ng-model="tinymce"></textarea>
+                        <textarea id="tinymce" ui-tinymce class="form-control" rows="3" placeholder="Enter the descrption for this experience" ng-model="eventDescription"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="eventPrice">Experience price per seat</label>
-                        <input type="number" class="form-control" ui-date ng-model="aDate" id="eventPrice" placeholder="How much does it cost for one person?">
+                        <input type="number" class="form-control" id="eventPrice" placeholder="How much does it cost for one person?" ng-model="eventPrice">
                     </div>
                     <div class="form-group">
                         <label for="eventDate">Experience date</label>
-                        <input type="text" class="form-control" ui-date ng-model="aDate" id="eventDate" placeholder="Select the date of the experience">
+                        <input type="text" class="form-control" ui-date ng-model="aDate" id="eventDate" placeholder="Select the date of the experience" ng-model="eventDate">
                     </div>
                     <div class="form-group">
                         <label for="eventTime">Experience time</label>
                         <div class="control-group input-append">
-                            <input type="text" ng-model="timepicker.time" bs-timepicker>
+                            <input type="text" ng-model="eventTime" bs-timepicker>
                             <button type="button" class="btn" data-toggle="timepicker" id="eventTime"><i class="icon-time"></i></button>
                         </div>
                     </div>
