--- a/app/assets/templates/home/home.html
+++ b/app/assets/templates/home/home.html
@@ -5,7 +5,7 @@
             <div class="col-md-2">
                 <a href="/"><img src="/assets/logo.png" alt=""/></a>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <!--
                 <div class="input-group">
 
@@ -14,15 +14,15 @@
                 </div>
                 -->
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
 
-                <div class="login pull-right" ng-show="isLoggedIn">
+                <div class="login pull-right" ng-hide="isLoggedIn">
                     <a href="#/users/login" class="button is-primary">Sign in / Sign up</a>
                 </div>
 
-                <div ng-hide="isLoggedIn" class="pull-right">
-                    <a href="" class="button is-secondary">Manage Experiences</a>
-
+                <div ng-show="isLoggedIn" class="pull-right">
+                    <a href="#/hosts/{{currentUser.id}}/manage" class="button is-secondary">Manage Experiences</a>
+                    <!--<a class="button is-primary" ng-click="logout()">Logout</a>-->
                 </div>
             </div>
         </div>
