--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,13 +108,15 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> --<
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-<script src="//documentcloud.github.io/underscore/underscore-min.js"></script>
+<!-- <script src="//documentcloud.github.io/underscore/underscore-min.js"></script> -->
 <!--
   <script src="js/lib/jquery/jquery-1.10.2.min.js"></script>
   <script src="js/lib/slider/slider.min.js"></script>
   -->
+<script src="/assets/lib/jquery/jquery-1.10.2.min.js"></script>
+<script src="//documentcloud.github.io/underscore/underscore-min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
 
 <%= javascript_include_tag "lib/tinymce/tinymce.min.js" %>
@@ -124,7 +126,7 @@
 </script>
 
 <script>
-    filepicker.setKey('Super_Awesome_Key');
+    filepicker.setKey('ASJiChL2QqvYT9LxDuUqgz');
 </script>
 
 <!-- Angularjs includes start -->
@@ -132,6 +134,7 @@
 <%= javascript_include_tag "lib/angularjs/angular-resource.js" %>
 <%= javascript_include_tag "lib/angularjs/angular-route.js" %>
 <%= javascript_include_tag "lib/angularjs/angular-animate.js" %>
+<%= javascript_include_tag "lib/angularjs/angular-cookies.js" %>
 <%= javascript_include_tag "lib/googlemaps/angular-google-maps.js" %>
 <%= javascript_include_tag "app/app.js" %>
 <!-- <%= javascript_include_tag "app/directives/textareaAutoGrow.js" %> -->
@@ -147,6 +150,7 @@
 <%= javascript_include_tag "app/filters/SplitIntoColsFilter.js" %>
 <%= javascript_include_tag "app/services/events/EventsService.js" %>
 <%= javascript_include_tag "app/controllers/EventsController.js" %>
+<%= javascript_include_tag "app/controllers/NewEventController.js" %>
 <%= javascript_include_tag "app/controllers/RecordCtrl.js" %>
 <%= javascript_include_tag "app/services/host/HostService.js" %>
 <%= javascript_include_tag "app/controllers/HostAdminController.js" %>
