--- a/app/assets/templates/events/show.html
+++ b/app/assets/templates/events/show.html
@@ -14,9 +14,8 @@
                         -->
                         <!--<h1>{{event.event_image.event_image.url}}</h1>-->
                         <h4>{{ event.event_name }}</h4>
-                        <p>
-                            {{ event.description }}
-                        </p>
+
+                        <div ng-bind-html="event.event_description | renderhtml"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
