--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,9 @@
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-527f39d169f8fe25&async=1"></script>
   <!-- Socail plugins js code -- end -->
 
+  <!-- Jquery ui theme -->
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
+
   <%= csrf_meta_tags %>
 </head>
 
@@ -116,6 +119,7 @@
   <script src="js/lib/slider/slider.min.js"></script>
   -->
 <script src="/assets/lib/jquery/jquery-1.10.2.min.js"></script>
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="//documentcloud.github.io/underscore/underscore-min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
 
@@ -135,11 +139,12 @@
 <%= javascript_include_tag "lib/angularjs/angular-route.js" %>
 <%= javascript_include_tag "lib/angularjs/angular-animate.js" %>
 <%= javascript_include_tag "lib/angularjs/angular-cookies.js" %>
+<%= javascript_include_tag "lib/angularjs/angular-sanitize.js" %>
 <%= javascript_include_tag "lib/googlemaps/angular-google-maps.js" %>
+<%= javascript_include_tag "lib/angular-ui/directives/date.js" %>
 <%= javascript_include_tag "app/app.js" %>
 <!-- <%= javascript_include_tag "app/directives/textareaAutoGrow.js" %> -->
 <%= javascript_include_tag "app/directives/angular-ui/tinymce.js" %>
-<%= javascript_include_tag "app/directives/angular-ui/date.js" %>
 <%= javascript_include_tag "app/directives/addthis.js" %>
 <%= javascript_include_tag "app/services/users/SessionService" %>
 <%= javascript_include_tag "app/controllers/HomeController.js" %>
@@ -148,6 +153,7 @@
 <%= javascript_include_tag "app/services/search/AlgoliaSearchService.js" %>
 <%= javascript_include_tag "app/controllers/SearchController.js" %>
 <%= javascript_include_tag "app/filters/SplitIntoColsFilter.js" %>
+<%= javascript_include_tag "app/filters/renderHTMLFromVariable.js" %>
 <%= javascript_include_tag "app/services/events/EventsService.js" %>
 <%= javascript_include_tag "app/controllers/EventsController.js" %>
 <%= javascript_include_tag "app/controllers/NewEventController.js" %>
